--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <label for="file-input">Provide a link to an image, GIF, or video:</label>
     <input type="url" id="file-input" placeholder="Enter URL here">
     <button id="overlay-btn">Apply Overlay</button>
+    <button id="preview-btn" style="display:none;">Preview</button>
+    <button id="save-btn" style="display:none;">Save GIF</button>
     <div id="output-container"></div>
   </div>
 
