--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
             margin-top: 20px;
         }
     </style>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gif.js/0.2.0/gif.min.js"></script>
 </head>
 <body>
     <h1>Overlay GIF onto Image/Video</h1>
