--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Overlay</title>
     <link rel="icon" href="/favicon.ico" type="image/x-icon">
-    
-    <!-- Load gif.js library before custom script -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gif.js/0.2.0/gif.min.js"></script>
-    
+
+    <!-- Updated gif.js library CDN -->
+    <script src="https://cdn.jsdelivr.net/npm/gif.js@0.2.0/dist/gif.min.js"></script>
+
     <style>
         #preview {
             display: none;
@@ -40,7 +40,7 @@
     </a>
 
     <script>
-        // Check if gif.js is loaded
+        // Check if gif.js is loaded properly
         if (typeof GIF === 'undefined') {
             console.error("GIF.js library is not loaded");
         } else {
