--- a/index.html
+++ b/index.html
@@ -108,7 +108,8 @@
                     height: canvas.height,
                     frameDelay: 100, // Frame delay to control speed (higher delay = slower)
                     transparent: 0xFFFFFF,
-                    workerScript: 'https://cdnjs.cloudflare.com/ajax/libs/gif.js/0.2.0/gif.worker.js'
+                    workerScript: 'https://cdn.jsdelivr.net/npm/gif.js@0.2.0/dist/gif.min.js'
+					
                 });
 
                 // Add frames to the gifGenerator as we draw the gif
