--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
             margin-top: 20px;
         }
     </style>
+	    <!-- Add GIF.js Library -->
+    <script src="https://cdn.jsdelivr.net/npm/gif.js@0.2.0/dist/gif.min.js"></script>
+
 </head>
 <body>
     <h1>Overlay GIF onto Image, GIF, or Video</h1>
