--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             margin-top: 20px;
         }
     </style>
-    <script src="https://cdn.jsdelivr.net/npm/gif.js@0.2.0/dist/gif.min.js"></script>
+    <script src="/gif.min.js"></script>
 </head>
 <body>
     <h1>Overlay GIF on Image, GIF, or Video</h1>
@@ -115,7 +115,7 @@
                         height: canvas.height,
                         frameDelay: 100,
                         transparent: 0xFFFFFF,
-                        workerScript: 'https://cdn.jsdelivr.net/npm/gif.js@0.2.0/dist/gif.worker.js'
+                        workerScript: '/gif.worker.js'
                     });
 
                     let frameIndex = 0;
