--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <script>
         const maxFileSize = 10 * 1024 * 1024; // 10MB limit
-        const jorkinGifUrl = 'https://your-server.com/jorkin.gif'; // Replace with the correct path to 'jorkin.gif'
+        const jorkinGifUrl = '/jorkin.gif'; // Replace with the correct path to 'jorkin.gif'
 
         function processFile() {
             const fileInput = document.getElementById('fileInput');
