--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <button id="downloadBtn" onclick="downloadGif()">Download GIF</button>
 </div>
 
-<script src="https://cdn.jsdelivr.net/npm/html2canvas@0.4.1/dist/html2canvas.min.js"></script>
+<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
 
 <script>
     const jorkinGifSrc = 'jorkin.gif'; // URL or local path to the jorkin.gif
