--- a/index.html
+++ b/index.html
@@ -3,244 +3,103 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>GIF Overlay Tool</title>
+    <title>Combine Media with Jorkin.gif</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             text-align: center;
-            margin: 0;
-            padding: 0;
+            margin: 20px;
         }
-        .container {
-            max-width: 800px;
-            margin: 20px auto;
+        input[type="file"], input[type="url"] {
+            margin: 10px;
         }
-        .preview-container {
-            position: relative;
+        #preview {
+            margin-top: 20px;
             max-width: 100%;
-            margin: 20px 0;
+            max-height: 400px;
+        }
+        .overlay-container {
+            position: relative;
+            display: inline-block;
+        }
+        .overlay-container img {
+            max-width: 100%;
+            max-height: 100%;
         }
         .overlay {
             position: absolute;
             bottom: 10px;
             left: 10px;
-            width: 50px;
-            height: 50px;
-        }
-        input[type="file"], input[type="url"] {
-            margin: 10px 0;
-            padding: 10px;
-        }
-        #preview {
-            max-width: 100%;
-            max-height: 500px;
-            display: none;
-        }
-        #error {
-            color: red;
-            margin-top: 10px;
-        }
-        #downloadBtn {
-            display: none;
-            margin-top: 20px;
-            padding: 10px 20px;
-            background-color: #4CAF50;
-            color: white;
-            border: none;
-            cursor: pointer;
+            width: 100px;
+            height: 100px;
+            background-image: url('jorkin.gif');
+            background-size: cover;
+            background-position: center;
         }
     </style>
 </head>
 <body>
 
-<div class="container">
-    <h1>GIF Overlay Tool</h1>
-    <p>Upload a picture, GIF, or video, or paste a link to it, and we will overlay <strong>jorkin.gif</strong> in the bottom left corner.</p>
-    
-    <input type="file" id="fileInput" accept="image/*,video/*">
-    <input type="url" id="urlInput" placeholder="Or paste URL here" />
-    <button onclick="processFile()">Overlay GIF</button>
+    <h1>Combine Your Media with Jorkin.gif</h1>
+    <p>Upload or provide a URL for an image, GIF, or video (Max 10MB) to combine with <strong>jorkin.gif</strong>.</p>
 
-    <div class="preview-container">
-        <img id="preview" alt="Preview of overlayed GIF">
-        <video id="videoPreview" controls style="display: none;" width="100%"></video>
-        <img id="overlayGif" class="overlay" src="jorkin.gif" alt="Jorkin GIF">
+    <input type="url" id="media-url" placeholder="Enter URL of an image, GIF, or video">
+    <br>
+    <input type="file" id="media-file" accept="image/*,video/*,.gif">
+    <br>
+    <button onclick="processMedia()">Process</button>
+    <br>
+    <div id="preview-container" class="overlay-container">
+        <img id="preview" src="" alt="Preview will appear here">
+        <div id="overlay" class="overlay"></div>
     </div>
+    <br>
+    <p id="error-message" style="color: red;"></p>
 
-    <div id="error"></div>
-    <button id="downloadBtn" onclick="downloadGif()">Download Combined GIF</button>
-</div>
+    <script>
+        const maxSize = 10 * 1024 * 1024; // 10MB in bytes
 
-<script src="https://html2canvas.hertzen.com/dist/html2canvas.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/gif.js@0.2.0/dist/gif.min.js"></script>
+        function processMedia() {
+            const fileInput = document.getElementById('media-file');
+            const urlInput = document.getElementById('media-url');
+            const errorMessage = document.getElementById('error-message');
+            const previewImage = document.getElementById('preview');
+            const overlay = document.getElementById('overlay');
+            errorMessage.textContent = '';
 
-<script>
-    const jorkinGifSrc = 'jorkin.gif'; // URL or local path to the jorkin.gif
-    const maxFileSize = 10 * 1024 * 1024; // 10MB
+            let mediaFile = fileInput.files[0];
+            let mediaUrl = urlInput.value;
 
-    let gif;
+            if (!mediaFile && !mediaUrl) {
+                errorMessage.textContent = 'Please provide either a file or a URL.';
+                return;
+            }
 
-    function processFile() {
-        const fileInput = document.getElementById('fileInput');
-        const urlInput = document.getElementById('urlInput');
-        const preview = document.getElementById('preview');
-        const videoPreview = document.getElementById('videoPreview');
-        const overlayGif = document.getElementById('overlayGif');
-        const errorDiv = document.getElementById('error');
-        const downloadBtn = document.getElementById('downloadBtn');
-
-        let file;
-        if (fileInput.files.length > 0) {
-            file = fileInput.files[0];
-        } else if (urlInput.value) {
-            file = urlInput.value;
-        }
-
-        // Clear previous error or file preview
-        errorDiv.textContent = '';
-        preview.style.display = 'none';
-        videoPreview.style.display = 'none';
-
-        if (file) {
-            if (typeof file === 'string') {
-                // Handle URL input
-                if (isValidUrl(file)) {
-                    handleUrl(file);
-                } else {
-                    showError('Invalid URL');
-                }
-            } else {
-                // Handle file input
-                if (file.size > maxFileSize) {
-                    showError('File is too large. Maximum size is 10MB.');
+            if (mediaFile) {
+                if (mediaFile.size > maxSize) {
+                    errorMessage.textContent = 'File size exceeds the 10MB limit.';
                     return;
                 }
                 const reader = new FileReader();
                 reader.onload = function(e) {
-                    const fileType = file.type;
-                    if (fileType.startsWith('image')) {
-                        handleImage(e.target.result);
-                    } else if (fileType.startsWith('video')) {
-                        handleVideo(e.target.result);
-                    } else {
-                        showError('Unsupported file type.');
-                    }
+                    let mediaUrl = e.target.result;
+                    previewImage.src = mediaUrl;
+                    overlay.style.display = 'block';
                 };
-                reader.readAsDataURL(file);
+                reader.readAsDataURL(mediaFile);
+            } else if (mediaUrl) {
+                const img = new Image();
+                img.onload = function() {
+                    previewImage.src = mediaUrl;
+                    overlay.style.display = 'block';
+                };
+                img.onerror = function() {
+                    errorMessage.textContent = 'Failed to load media from the URL.';
+                };
+                img.src = mediaUrl;
             }
-        } else {
-            showError('Please upload a file or provide a URL.');
         }
-    }
-
-    function handleUrl(url) {
-        const preview = document.getElementById('preview');
-        const videoPreview = document.getElementById('videoPreview');
-        const errorDiv = document.getElementById('error');
-        const downloadBtn = document.getElementById('downloadBtn');
-
-        // Determine if it's an image or video
-        const imgExts = ['jpg', 'jpeg', 'png', 'gif', 'webp'];
-        const videoExts = ['mp4', 'webm', 'ogg'];
-        const urlExt = url.split('.').pop().toLowerCase();
-
-        if (imgExts.includes(urlExt)) {
-            // Handle Image
-            handleImage(url);
-        } else if (videoExts.includes(urlExt)) {
-            // Handle Video
-            handleVideo(url);
-        } else {
-            showError('Invalid file type from URL.');
-        }
-    }
-
-    function handleImage(dataUrl) {
-        const preview = document.getElementById('preview');
-        const overlayGif = document.getElementById('overlayGif');
-        preview.style.display = 'block';
-        preview.src = dataUrl;
-        document.getElementById('downloadBtn').style.display = 'block';
-
-        // Initialize GIF generator
-        gif = new GIF({
-            workers: 2,
-            quality: 10,
-            width: preview.width,
-            height: preview.height
-        });
-
-        // Add the first frame
-        addFrame(preview);
-    }
-
-    function handleVideo(dataUrl) {
-        const videoPreview = document.getElementById('videoPreview');
-        const preview = document.getElementById('preview');
-        preview.style.display = 'none';
-        videoPreview.style.display = 'block';
-        videoPreview.src = dataUrl;
-        document.getElementById('downloadBtn').style.display = 'none'; // Video download is more complex
-
-        // Initialize GIF generator
-        gif = new GIF({
-            workers: 2,
-            quality: 10,
-            width: videoPreview.videoWidth,
-            height: videoPreview.videoHeight
-        });
-
-        // Capture video frames
-        videoPreview.addEventListener('play', function() {
-            if (!videoPreview.paused && !videoPreview.ended) {
-                addFrame(videoPreview);
-                setTimeout(function () {
-                    addFrame(videoPreview);
-                }, 100); // Capture every 100ms for the GIF
-            }
-        });
-    }
-
-    function addFrame(element) {
-        const canvas = document.createElement('canvas');
-        const ctx = canvas.getContext('2d');
-        canvas.width = element.width || element.videoWidth;
-        canvas.height = element.height || element.videoHeight;
-
-        // Draw the element (image or video) to the canvas
-        ctx.drawImage(element, 0, 0, canvas.width, canvas.height);
-
-        // Overlay the GIF
-        const overlayGif = document.getElementById('overlayGif');
-        ctx.drawImage(overlayGif, 10, canvas.height - overlayGif.height - 10);
-
-        // Add this frame to the GIF generator
-        gif.addFrame(canvas, { delay: 100, copy: true });
-    }
-
-    function showError(message) {
-        const errorDiv = document.getElementById('error');
-        errorDiv.textContent = message;
-    }
-
-    function isValidUrl(str) {
-        const pattern = new RegExp('^(https?:\\/\\/)?([\\w\\-]+\\.)+[\\w\\-]+(\\/[^\\s]*)?$', 'i');
-        return pattern.test(str);
-    }
-
-    function downloadGif() {
-        // Ensure the GIF is finished rendering before downloading
-        gif.on('finished', function(blob) {
-            const link = document.createElement('a');
-            link.href = URL.createObjectURL(blob);
-            link.download = 'combined_overlay.gif';
-            link.click();
-        });
-
-        // Start the rendering process
-        gif.render();
-    }
-</script>
+    </script>
 
 </body>
 </html>
